# onnxruntime

./: .gitignore  build.md
cmake/: CMakeLists.txt  aarch64.cmake
include/onnxruntime/core/framework/: kernel_def_builder.h  tensor.h
onnxruntime/core/framework/: allocation_planner.cc  data_transfer.cc  execution_frame.cc  kernel_def_builder.cc  tensor.cc
onnxruntime/core/providers/shared_library/: provider_interfaces.h  provider_wrappedtypes.h
onnxruntime/core/session/: provider_bridge_ort.cc
onnxruntime/test/framework/: allocation_planner_test.cc  tensor_test.cc
test_c/: CMakeLists.txt  test.c  test.cc
test_c/include/: utils.h
test_c/src/: test.cc  utils.cc
tools/ci_build/: build.py
